# M9T2-ATIVIDADES-CAIO

./: .gitignore  README.md
.github/workflows/: ponderada-2.yaml  ponderada-4.yaml  ponderada_2.yaml
ponderada-1/: README.md  requirements.txt
ponderada-1/sensor/: __init__.py  fake_data.py  model.py
ponderada-3/config/: pwfile
ponderada_1/: main.py
ponderada_1/sensor/: __init__.py
ponderada_2/: README.md  setup.cfg  simulator_config.json  tox.ini
ponderada_3/: README.md  docker-compose.yaml
ponderada_3/config/: mosquitto.conf
ponderada_4/: .env  README.md  main.py  setup.cfg  tox.ini
ponderada_4/mqtt/: main.py
ponderada_4/mqtt/broker/: publisher.py  subscriber.py
ponderada_4/mqtt/generator/: fake_data.py
ponderada_4/mqtt/sensor/: model.py
ponderada_4/tests/integration/: test_broker_integration.py
ponderada_4/tests/unitary/: test_broker_publisher.py  test_broker_qos_profile.py  test_broker_subscriber.py  test_sensor_data_generator.py
ponderada_5/: README.MD  README.md  docker-compose.yaml
ponderada_5/service/: gerador.py  main.py  setup.cfg  tox.ini
ponderada_5/service/mqtt/generator/: fake_data.py
ponderada_5/service/mqtt/sensor/: model.py
ponderada_5/service/tests/integration/: test_broker_integration.py
ponderada_5/service/tests/unitary/: test_broker_qos_profile.py  test_sensor_data_generator.py
ponderada_6_7/: README.md  docker-compose.yaml
prova_1_m9/: README.md  main.py
prova_2_m9/: README.md  database.txt  main.py  requirements.txt
prova_2_m9/generator/: kafka_consumer.py  kafka_producer.py
(+16 files in other folders)
