[metadata]
name = mqtt
version = 2.0
author = Caio Martins
author_email = caio.abreu@sou.inteli.edu.br
description = Basic API integration with Metabase
long_description = file: README.md
long_description_content_type = text/markdown
url = https://inteli.edu
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    faker
    paho-mqtt
    importlib-metadata
    pydantic
    python-decouple
    psycopg2-binary

[options.packages.find]
exclude = 
    tests

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
    flake8
    tox